--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -39,7 +39,7 @@
 		<!-- / PUBLIC COMMENT PERIOD NOTIFICATION -->
 
 		<!-- PROJECT INFO -->
-		<section class="project-info" ng-if="('project' | shouldDisplayPanel:'tombstone':project.status)">
+		<section class="project-info">
 			<tmpl-project-tombstone id="anchor-tombstone" x-project="project"></tmpl-project-tombstone>
 		</section>
 
