ESM-333 - Artifact Templates: Digital Signature Field Variable
- Fixing an issue with outdated markup/styling for the signature upload modal.

--- a/modules/documents/client/views/partials/document-upload-signature.html
+++ b/modules/documents/client/views/partials/document-upload-signature.html
@@ -1,65 +1,56 @@
-<label class="control-label">Upload Signature</label>
-<div class="well well-sm clearfix">
-	<div class="row">
-		<div class="col-md-12">
-			<div ngf-drop ngf-select
-				ng-model="files"
-				class="drop-box"
-				ngf-drag-over-class="dragover"
-				ngf-multiple="true"
-				ngf-allow-dir="true">Drop Signature file here or click to select
+<div class="modal-header">
+	<h3 class="modal-title">Upload Signature</h3>
+</div>
+
+<div class="modal-body">
+
+	<div class="alert alert-danger" ngf-no-file-drop >
+		File Drag and Drop is not supported for this browser.
+	</div>
+
+	<div class="upload-target no-margin"
+		ngf-drag-over-class="dragover"
+		ngf-drop 
+		ngf-select
+		ng-model="files"
+		ngf-multiple="true"
+		ngf-allow-dir="true">
+		<div class="instructions"><strong>Drag and Drop Files Here</strong> or <strong>Select Files</strong></div>
+		<div class="requirements">Total upload size limited to 300MB.</div>
+	</div>
+
+	<div class="list-group no-margin" ng-if="sigUp.fileList.length > 0">
+		<li class="list-group-item flex-row"
+			ng-class="{'danger': f.$error}" 
+			ng-repeat="f in sigUp.fileList">
+			<div class="icon">
+				<span class="glyphicon glyphicon-file"></span>
 			</div>
-		</div>
+			<div class="title">{{f.name}} {{f.$error}} {{f.$errorParam}}</div>
+			<div class="actions">
+				<div class="file-progress" ng-if="!f.$error && f.progress">
+					<div class="progress">
+						<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+							style="width:{{f.progress}}%" 
+							ng-bind="f.progress + '%'">
+							<span class="sr-only">{{ f.progress }}</span>
+						</div>
+					</div>
+				</div>
+				<button class="btn btn-default btn-sm" title="Remove File"
+					ng-click="sigUp.removeFile(f)" 
+					ng-if="!f.$error && !f.progress">
+					<span class="glyphicon glyphicon-remove"></span>
+				</button>
+			</div>
+		</li>
 	</div>
 
-	<table class="table table-condensed">
-		<thead>
-			<tr class="small">
-				<th width="90%">File</th>
-				<th width="10%"></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ngf-no-file-drop>
-				<td class="text-center">
-					<p class="form-control-static">File Drag/Drop is not supported for this browser (pdf or image files only)</p>
-				</td>
-			</tr>
-			<tr ng-if="!files">
-				<td class="text-center" class="text-center">
-					<p class="form-control-static">Drag a file to the dashed region above to upload.</p>
-				</td>
-			</tr>
-			<tr ng-repeat="f in sigUp.fileList" ng-class="{'danger': f.$error}">
+</div>
 
-
-				<td ng-if="f.$error">
-					<p class="form-control-static text-danger">FILE ERROR: {{f.name}} {{f.$error}} {{f.$errorParam}}</p>
-				</td>
-
-				<td ng-if="!f.$error">
-					<p class="form-control-static">{{f.name}}</p>
-				</td>
-
-
-				<td ng-if="!f.$error && !f.progress" class="text-right">
-					<p class="form-control-static"><a href ng-click="sigUp.removeFile(f)"><span class="glyphicon glyphicon-remove"></span></a></p>
-				</td>
-
-				<td ng-if="!f.$error && f.progress">
-					<div class="progress" ng-show="f.progress >= 0" style="margin-top: 7px;"><div class="progress-bar progress-bar-success" role="progressbar" style="width:{{f.progress}}%" ng-bind="f.progress + '%'">{{ f.progress }}</div></div>
-				</td>
-
-			</tr>
-		</tbody>
-	</table>
-
-	<div class="row" ng-if="!sigUp.inProgress && !sigUp.hideUploadButton">
-		<div class="col-sm-12 text-right">
-			<button ng-click="sigUp.upload()" ng-if="sigUp.fileList.length > 0" class="btn btn-success">
-				Upload Queued Documents
-			</button>
-		</div>
-	</div>
+<div class="modal-footer">
+	<button class="btn btn-primary"
+		ng-click="sigUp.upload()" 
+		ng-disabled="!sigUp.fileList.length > 0 || sigUp.inProgress">OK</button>
 </div>
 
