--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -2,7 +2,7 @@
 <div class="view-title-container flex-row">
 	<h1>Edit Content &nbsp;&rsaquo;&nbsp; {{artifact.name}}</h1>
 	<div class="actions">
-		<button class="btn btn-default btn-sm" title="Remove this content from Project" ng-click="remove()">Remove</button>
+		<button class="btn btn-default btn-sm" ng-if="artifact.typeCode !=='inspection-report' " title="Remove this content from Project" ng-click="remove()">Remove</button>
 		<button class="btn btn-default btn-sm" title="Save" ng-click="save()">Save</button>
 		<div class="btn-group">
 			<button class="btn btn-default btn-sm"
