--- a/modules/utils/client/views/partials/entity-select-modal.html
+++ b/modules/utils/client/views/partials/entity-select-modal.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
 	<button class="btn btn-default close" ng-click="cancel()"><span aria-hidden="true">×</span></button>
-	<h3 class="modal-title">Select Valued Components</h3>
+	<h3 class="modal-title">Select {{title}}</h3>
 </div>
 
 <div class="modal-body">
