ESM-50: Fixing return call on selecting order artifacts (filter inspection-reports).  Prep for enforcement actions view mode - needs UI work.

--- a/modules/artifacts/client/views/artifact-list-chooser.html
+++ b/modules/artifacts/client/views/artifact-list-chooser.html
@@ -1,6 +1,6 @@
 
 <div class="modal-header">
-  <h3 class="modal-title">Project Artifacts</h3>
+  <h3 class="modal-title">Project Content</h3>
 </div>
 
 <div class="modal-body">
@@ -15,7 +15,7 @@
           <td data-title="'Version'">{{t.version}}</td><span ng-if="t.published" class="label label-success pull-right">published</span>
       </tr>
       <tr ng-show="!s.items" class="text-center">
-        <td colspan="3">No Project Artifacts found.</td>
+        <td colspan="3">No Project Content found.</td>
       </tr>
     </table>
   </section>
