--- a/modules/artifacts/client/views/artifact-chooser.html
+++ b/modules/artifacts/client/views/artifact-chooser.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3 class="modal-title">Project Artifacts</h3>
+	<h3 class="modal-title">Project Content</h3>
 </div>
 <div class="modal-body">
 	<ul class="list-group">
