--- a/modules/core/client/views/role-new-gear.html
+++ b/modules/core/client/views/role-new-gear.html
@@ -1,1 +1,5 @@
-<a ng-if="context.userCan.createRole" class="btn btn-link btn-sm" x-role-new-modal x-context="context">+ New Role</a>
+
+<a class="btn btn-sm btn-default"
+    ng-if="context.userCan.createRole" 
+    x-role-new-modal 
+    x-context="context"><span class="glyphicon glyphicon-plus"></span><span>New Role</span></a>
