--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -1,83 +1,75 @@
 <div class="modal-header">
-  <button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
-  <h3 class="modal-title">Edit Roles &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
+	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
+	<h3 class="modal-title">Edit Roles &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
 </div>
 
 <div class="modal-body">
 
-  <!-- TABS -->
-  <ul class="tab-container nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By
-      User</a></li>
-    <li role="presentation"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By Roles</a></li>
-  </ul><!-- / TABS -->
+	<!-- TABS -->
+	<ul class="tab-container nav nav-tabs" role="tablist">
+		<li role="presentation" class="active"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By User</a></li>
+		<li role="presentation"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By Roles</a></li>
+	</ul>
+	<!-- / TABS -->
 
-  <!-- SET BY USERS -->
-  <div class="tab-pane" ng-show="s.userView">
-    <div class="form-group select-permission">
-      <label>Select User</label>
-      <div class="flex-row">
-        <select class="form-control" id="user" ng-model="s.currentUser"
-                ng-options="p as p for p in s.allUsers | orderBy"></select>
-        <tmpl-add-user-to-context context="s.context" role="s.defaultRole"></tmpl-add-user-to-context>
-      </div>
-    </div>
-    <div class="flex-row">
-      <label>Manage Roles for User</label>
-      <tmpl-role-new context="s.context" class="new-role-btn" ng-if="s.context.userCan.createRole"></tmpl-role-new>
-    </div>
-    <div class="panel panel-default">
-      <ul class="list-group">
-        <li class="list-group-item" ng-repeat="role in s.allRoles">
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"
-                     ng-change="s.clickRole(s.currentUser, role, s.userRoleIndex.user[s.currentUser][role])"
-                     ng-model="s.userRoleIndex.user[s.currentUser][role]">
-              {{ role }}
-              </input>
-            </label>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
+	<!-- SET BY USERS -->
+	<div class="tab-pane" ng-show="s.userView">
+		<div class="form-group select-permission">
+			<label>Select User</label>
+			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="p as p for p in s.allUsers | orderBy"></select>
+			<tmpl-add-user-to-context context="s.context" role="s.defaultRole"></tmpl-add-user-to-context>
+		</div>
+		<div class="form-group manage-permission">
+			<label class="control-label">Manage Roles for Users</label>
+			<tmpl-role-new context="s.context" class="new-role-btn" ng-if="s.context.userCan.createRole"></tmpl-role-new>
+		</div>
+		<div class="panel panel-default">
+			<ul class="list-group no-border">
+				<li class="list-group-item" ng-repeat="role in s.allRoles">
+					<div class="checkbox">
+						<label>
+							<input type="checkbox"
+								ng-change="s.clickRole(s.currentUser, role, s.userRoleIndex.user[s.currentUser][role])"
+								ng-model="s.userRoleIndex.user[s.currentUser][role]">{{ role }}
+							</input>
+						</label>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 
-  <!-- SET BY ROLE -->
-  <div class="tab-pane" ng-show="!s.userView">
-    <div class="form-group select-permission">
-      <label for="role">Select Role</label>
-      <div class="flex-row">
-        <select class="form-control" id="role" ng-model="s.currentRole"
-                ng-options="p as p for p in s.allRoles | orderBy"></select>
-        <tmpl-role-new context="s.context" ng-if="s.context.userCan.createRole"></tmpl-role-new>
-      </div>
-    </div>
-    <div class="flex-row">
-      <label class="control-label">Manage Users for Role</label>
-      <tmpl-add-user-to-context class="new-role-btn" context="s.context" role="s.defaultRole"
-                                ng-if="s.context._id !== 'application'"></tmpl-add-user-to-context>
-    </div>
-    <div class="panel panel-default">
-      <ul class="list-group">
-        <li class="list-group-item" ng-repeat="u in s.allUsers">
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"
-                     ng-change="s.clickUser(u, s.currentRole, s.userRoleIndex.role[s.currentRole][u])"
-                     ng-model="s.userRoleIndex.role[s.currentRole][u]">
-              {{ u }}
-              </input>
-            </label>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div><!-- SET BY ROLE -->
+	<!-- SET BY ROLE -->
+	<div class="tab-pane" ng-show="!s.userView">
+		<div class="form-group select-permission">
+			<label for="role">Select Role</label>
+			<select class="form-control" id="role" ng-model="s.currentRole" ng-options="p as p for p in s.allRoles | orderBy"></select>
+			<tmpl-role-new context="s.context" ng-if="s.context.userCan.createRole"></tmpl-role-new>
+		</div>
+		<div class="form-group manage-permission">
+			<label class="control-label">Manage Users for Role</label>
+			<tmpl-add-user-to-context class="new-role-btn" context="s.context" role="s.defaultRole" ng-if="s.context._id !== 'application'"></tmpl-add-user-to-context>
+		</div>
+		<div class="panel panel-default">
+			<ul class="list-group no-border">
+				<li class="list-group-item" ng-repeat="u in s.allUsers">
+					<div class="checkbox">
+						<label>
+              				<input type="checkbox"
+                     			ng-change="s.clickUser(u, s.currentRole, s.userRoleIndex.role[s.currentRole][u])"
+                     			ng-model="s.userRoleIndex.role[s.currentRole][u]">
+              				</input>{{ u }}
+            			</label>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<!-- SET BY ROLE -->
 
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
-  <button class="btn btn-primary" ng-click="s.ok()">OK</button>
+	<button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
+	<button class="btn btn-primary" ng-click="s.ok()">OK</button>
 </div>
