--- a/modules/core/client/views/404.client.view.html
+++ b/modules/core/client/views/404.client.view.html
@@ -1,5 +1,12 @@
-<h1>Page Not Found</h1>
-<div class="alert alert-danger" role="alert">
-  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-  <span class="sr-only">Error:</span> Page Not Found
+<div class="main-panel">
+    <div class="view-title-container">
+        <h1>Page Not Found</h1>
+    </div>
+    <div class="view-body-container">
+        <p>The page you have requested could not be found.</p>
+        <p>
+            <a class="btn btn-sm btn-primary" ui-sref="projects" href>
+                <span class="glyphicon glyphicon-chevron-left"></span><span>Back to Home</span></a>
+        <p>
+    </div>
 </div>
