--- a/modules/core/client/views/smerr.view.html
+++ b/modules/core/client/views/smerr.view.html
@@ -1,4 +1,4 @@
-<div class="error-view">
+<div class="main-panel">
 	<div class="view-title-container">
 		<h1>Authentication Error</h1>
 	</div>
@@ -10,6 +10,10 @@
         <p ng-show="userType === 'individual'">bceid (individual) user is not known to ESM</p>
         <p ng-show="userType === 'internal'">idir user is not known to ESM</p>
         <p ng-show="userType === 'unknown'">no siteminder headers provided...</p>
+        <p>
+            <a class="btn btn-sm btn-primary" ui-sref="projects" href>
+                <span class="glyphicon glyphicon-chevron-left"></span><span>Back to Home</span></a>
+        <p>
     </div>
 
 </div>
