--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -69,7 +69,7 @@
 		<div class="panel-heading">
 			<h2>Enforcement Actions</h2>
 		</div>
-		<table ng-table="tableParams" class="enforcement-table table table-hover">
+		<table ng-table="tableParams" class="enforcement-table table">
 			<tr ng-repeat="o in ir.enforcementActions">
 				<td class="enforcement-col"
 					header-class="'enforcement-col'"
@@ -95,6 +95,7 @@
 							<!-- </a> -->
 						<!-- </tr> -->
 					<!-- </table> -->
+
 				</td>
 				<td data-title="'Order'">
 					<ul class="anchor-list">
